fix input align to center

--- a/src/components/canva/HighScoreOffCanva.css
+++ b/src/components/canva/HighScoreOffCanva.css
@@ -61,6 +61,7 @@ label {
 }
 
 .input {
+  text-align: center;
   width: 85%;
   margin-left: 10px !important;
 }
